@@ -18,6 +18,7 @@
 <!ENTITY Burrow SYSTEM "Flags/Burrow.xml">
 <!ENTITY Cloaking SYSTEM "Flags/Cloaking.xml">
 <!ENTITY Colorblindness SYSTEM "Flags/Colorblindness.xml">
+<!ENTITY ForwardOnly SYSTEM "Flags/ForwardOnly.xml">
 <!ENTITY Genocide SYSTEM "Flags/Genocide.xml">
 <!ENTITY GreenTeam SYSTEM "Flags/GreenTeam.xml">
 <!ENTITY GuidedMissile SYSTEM "Flags/GuidedMissile.xml">
@@ -39,6 +40,7 @@
 <!ENTITY QuickTurn SYSTEM "Flags/QuickTurn.xml">
 <!ENTITY RapidFire SYSTEM "Flags/RapidFire.xml">
 <!ENTITY RedTeam SYSTEM "Flags/RedTeam.xml">
+<!ENTITY ReverseOnly SYSTEM "Flags/ReverseOnly.xml">
 <!ENTITY Ricochet SYSTEM "Flags/Ricochet.xml">
 <!ENTITY RightTurnOnly SYSTEM "Flags/RightTurnOnly.xml">
 <!ENTITY Seer SYSTEM "Flags/Seer.xml">
