@@ -155,8 +155,9 @@ namespace Flags {
     *Ricochet, *SuperBullet, *InvisibleBullet, *Stealth, *Tiny, *Narrow,
     *Shield, *Steamroller, *ShockWave, *PhantomZone, *Genocide, *Jumping,
     *Identify, *Cloaking, *Useless, *Masquerade, *Seer, *Thief, *Burrow,
-    *Colorblindness, *Obesity, *LeftTurnOnly, *RightTurnOnly, *Momentum, *Blindness,
-    *Jamming, *WideAngle, *NoJumping, *TriggerHappy;
+    *Colorblindness, *Obesity, *LeftTurnOnly, *RightTurnOnly, *Momentum, 
+    *Blindness, *Jamming, *WideAngle, *NoJumping, *TriggerHappy,
+    *ReverseOnly, *ForwardOnly;
 
   void init();
 }
